# SciQLopCore

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build  meson_options.txt  pyproject.toml
DebugHelpers/: datetimerange.py
UI/: ProductsTree.ui  mainwindow.ui
bindings/: PyDataProvider.cpp  PyDataProvider.h  PyDataProvider.hpp  bindings.h  bindings.xml  main.cpp  meson.build  numpy_wrappers.cpp  numpy_wrappers.h  numpy_wrappers.hpp  shiboken-helper.py  src_list.py
include/: Version.h
include/Catalogue/: CatalogueController.h
include/Common/: MimeTypesDef.h  Numeric.h  containers.h  cpp_utils.h  debug.h  trees.h  types_detectors.h  variant_with_base.h
include/Data/: AcquisitionDataPacket.h  AcquisitionRequest.h  DataProviderParameters.h  DataSeries.h  DataSeriesType.h  DateTimeRange.h  DateTimeRangeHelper.h  IDataProvider.h  IDataSeries.h  MultiComponentTimeSerie.h  ScalarTimeSerie.h  SpectrogramSeries.h  SpectrogramTimeSerie.h  SqpIterator.h  TimeSeriesUtils.h  VariableRequest.h  VectorSeries.h  VectorTimeSerie.h
include/DataSource/: DataSourceController.h  DataSourceItem.h  DataSourcesFilter.h  datasources.h
include/MimeTypes/: MimeTypes.h
include/Network/: Response.h
include/PluginManager/: PluginManager.h
include/SciQLopCore/: SciQLopCore.hpp  SqpApplication.h  SqpApplication.hpp
include/SciQLopCore/Common/: DateUtils.h  DateUtils.hpp  MetaTypes.h  MetaTypes.hpp  Product.hpp  SciQLopObject.hpp  SignalWaiter.h  SignalWaiter.hpp  SortUtils.h  debug.hpp
include/SciQLopCore/Data/: DataProviderParameters.h  DataProviderParameters.hpp  DataSeriesType.h  DataSeriesType.hpp  DateTimeRange.h  DateTimeRange.hpp  DateTimeRangeHelper.h  DateTimeRangeHelper.hpp  IDataProvider.h  IDataProvider.hpp  MultiComponentTimeSerie.h  MultiComponentTimeSerie.hpp  Pipelines.hpp  ScalarTimeSerie.h  ScalarTimeSerie.hpp  SpectrogramTimeSerie.h  SpectrogramTimeSerie.hpp  TimeSeriesUtils.h  TimeSeriesUtils.hpp  VectorTimeSerie.h  VectorTimeSerie.hpp
include/SciQLopCore/DataSource/: DataProviderParameters.hpp  DataSourceItem.h  DataSourceItem.hpp  DataSourceItemAction.h  DataSourceItemAction.hpp  DataSourceItemMergeHelper.h  DataSourceItemMergeHelper.hpp  DataSources.hpp  IDataProvider.hpp  datasources.h
include/SciQLopCore/GUI/: CentralWidget.hpp  DragAndDrop.hpp  EventTimeSpan.hpp  MainWindow.h  MainWindow.hpp  PlotWidget.hpp  PorductsTree.hpp  TimeSyncPanel.hpp  TimeSyncPannel.hpp  TimeWidget.hpp
include/SciQLopCore/MimeTypes/: MimeTypes.h  MimeTypes.hpp
include/SciQLopCore/logging/: SciQLopLogs.hpp
include/Time/: TimeController.h
include/Variable/: ProportionalCacheStrategy.h  SingleThresholdCacheStrategy.h  Variable.h  Variable2.h  VariableAcquisitionWorker.h  VariableCacheController.h  VariableCacheStrategy.h  VariableCacheStrategyFactory.h  VariableController.h  VariableController2.h  VariableModel.h  VariableModel2.h  VariableSynchronizationGroup.h  VariableSynchronizationGroup2.h
include/Variable/private/: VCTransaction.h
include/Visualization/: VisualizationController.h
resources/: sqpguiresources.qrc
src/: SciQLopCore.cpp  SqpApplication.cpp  Version.cpp  meson.build
src/Catalogue/: CatalogueController.cpp
src/Common/: DateUtils.cpp  MimeTypesDef.cpp  SciQLopObject.cpp  SignalWaiter.cpp  StringUtils.cpp
src/Data/: Pipelines.cpp  ScalarTimeSerie.cpp  SpectrogramSeries.cpp  VectorTimeSerie.cpp
src/DataSource/: DataSourceController.cpp  DataSourceItem.cpp  DataSourceItemAction.cpp  DataSourceItemMergeHelper.cpp  DataSources.cpp  DataSourcesFilter.cpp  IDataProvider.cpp  datasources.cpp
src/GUI/: CentralWidget.cpp  EventTimeSpan.cpp  MainWindow.cpp  PlotWidget.cpp  PorductsTree.cpp  TimeSyncPanel.cpp  TimeSyncPannel.cpp  TimeWidget.cpp
src/MimeTypes/: MimeTypes.cpp
src/Network/: Downloader.cpp
src/PluginManager/: PluginManager.cpp
src/Time/: TimeController.cpp
src/Variable/: Variable.cpp  Variable2.cpp  VariableAcquisitionWorker.cpp  VariableController.cpp  VariableController2.cpp  VariableModel.cpp  VariableModel2.cpp  VariableSynchronizationGroup2.cpp
src/Visualization/: VisualizationController.cpp
src/logging/: SciQLopLogs.cpp
src/pybind11_wrappers/: CatalogWrappers.cpp  CoreWrappers.cpp  CoreWrappers.h  QtWrappers.cpp  pywrappers_common.h
subprojects/: SciQLopPlots.wrap  TimeSeries.wrap  cpp_utils.wrap  gtest.wrap  hedley.wrap
tests/: CMakeLists.txt  TestVariables.py  meson.build
tests/CatalogueController/: TestCatalogueController.cpp
tests/Common/: TestContainers.cpp
tests/Data/: TestDateTimeRange.cpp
tests/DataSource/: DataSourceItemBuilder.cpp  DataSourceItemBuilder.h  DataSourcesManualTest.cpp  TestDataSourceController.cpp  TestDataSources.cpp
tests/Network/: TestDownloader.cpp
tests/TestUtils/: PyTestWrapperExe.cpp  TestProviders.cpp  TestProviders.h
tests/Variable/: TestSyncGroup.cpp  TestVariable.cpp  TestVariableCacheController.cpp  TestVariableController.cpp  TestVariableController2.cpp  TestVariableController2Async.cpp  TestVariableController2WithSync.cpp  TestVariableSync.cpp
tests/bindings/: TestPythonDataSource.py  manual_test.py
