[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'numpy',
  'shiboken6-generator',
  'shiboken6',
  'PySide6'
]

[project]
name = 'SciQLopBindings'
dynamic = ['version']
requires-python=">=3.7"
license = {file="COPYING"}
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ['numpy', 'PySide6', 'speasy']
[project.urls]
homepage = "https://github.com/SciQLop/SciQLopCore"
